--- a/index.html
+++ b/index.html
@@ -15,38 +15,38 @@
              <i><p>O Agrinho é um programa educacional que visa à formação de cidadãos conscientes, críticos e
                 participativos, promovendo a educação rural de qualidade e estimulando práticas sustentáveis e
                 conservação ambiental.</p></i>
-            <p>Fundado em 1995, o Agrinho já alcançou milhares de escolas e comunidades rurais em todo o estado,
-                promovendo a integração entre educação formal e práticas sustentáveis no campo.</p>
-            <p>O programa é uma parceria entre a Federação da Agricultura e Pecuária do Estado (FAEP) e entidades
+            <i><p>Fundado em 1995, o Agrinho já alcançou milhares de escolas e comunidades rurais em todo o estado,
+                promovendo a integração entre educação formal e práticas sustentáveis no campo.</p></i>
+            <i><p>O programa é uma parceria entre a Federação da Agricultura e Pecuária do Estado (FAEP) e entidades
                 públicas e privadas, e oferece materiais pedagógicos, capacitação de professores e suporte para a
-                realização de atividades educativas.</p>
+                realização de atividades educativas.</p></i>
         </header>
         <main>
             <seção id="fazenda">
                 <h2>Sua Fazenda</h2>
-                <p>Sua Fazenda é um projeto educacional que visa ensinar aos alunos sobre agricultura, sustentabilidade
+                <i><p>Sua Fazenda é um projeto educacional que visa ensinar aos alunos sobre agricultura, sustentabilidade
                     e
                     conservação ambiental. O projeto é frequentemente utilizado nas escolas brasileiras como uma
                     ferramenta
-                    para educar os alunos sobre a importância da agricultura e do meio ambiente.</p>
+                    para educar os alunos sobre a importância da agricultura e do meio ambiente.</p></i>
 
-                <p>No contexto de Agrinho, “Sua Fazenda” pode ser uma simulação ou um jogo onde os alunos podem criar e
+                <i><p>No contexto de Agrinho, “Sua Fazenda” pode ser uma simulação ou um jogo onde os alunos podem criar e
                     gerir a sua própria quinta virtual, tomando decisões sobre culturas, pecuária e recursos. O objetivo
                     é
                     ensinar aos alunos os desafios e responsabilidades da agricultura, bem como a importância das
                     práticas
-                    sustentáveis.</p>
+                    sustentáveis.</p></i>
 
                 <h3>Algumas atividades possíveis em "Sua Fazenda" podem incluir:</h3>
 
-                <p> Plantio e
+                <i><p> Plantio e
                     Aumentando e
                     Gerenciando recursos como
                     Lidar com desafios ambientais como pragas,
                     Tomar decisões sobre práticas sustentáveis ​​e
                     Ao participar do “Sua Fazenda”, os alunos podem desenvolver habilidades importantes como pensamento
                     crítico, resolução de problemas e tomada de decisões, além de aprenderem sobre a importância da
-                    agricultura e da conservação ambiental.</p>
+                    agricultura e da conservação ambiental.</p></i>
                 <ul id="lista-fazenda">
                     <!-- os itens da fazenda serão exibidos aqui -->
                 </ul>
