--- a/semente.html
+++ b/semente.html
@@ -13,31 +13,31 @@
 <p>Escolha um local com solo fértil e bem drenado.
  Remova qualquer vegetação ou detritos do solo.
  Adicione um pouco de adubo orgânico para enriquecer o solo.</p>
-
-Passo 2: Plantar a Semente**
-
+<ul>
+<li>Passo 2: Plantar a Semente</li>
+</ul>
  <p>Abra um buraco pequeno no solo, cerca de 1-2 cm de profundidade.
  Coloque a semente do Agrinho no buraco e cubra com um pouco de solo.
  Pressione levemente o solo para fixar a semente no lugar.</p>
-
-Passo 3: Regar
-
+<ul>
+<li>Passo 3: Regar</li>
+</ul>
  <p>Regue a semente com água morna e fresca.
 Certifique-se de que o solo esteja sempre úmido, mas não encharcado.</p>
-
-Passo 4: Cuidar
-
+<ul>
+<li>Passo 4: Cuidar</li>
+</ul>
  <p>Mantenha o solo úmido e livre de ervas daninhas.
  Forneça luz solar adequada para a planta crescer.
  Adicione adubo orgânico regularmente para nutrir a planta.</p>
-
-Passo 5: Colher
-
+<ul>
+<li>Passo 5: Colher</li>
+</ul>
  <p>Depois de 3-4 meses, a planta estará pronta para colher.
  Corte a planta perto do solo e seque-a para uso futuro.</p>
-
-Dicas
-
+<ul>
+<li>Dicas</li>
+</ul>
  <p>Certifique-se de que a semente esteja fresca e de boa qualidade.
  Plante a semente em uma época do ano adequada para o clima local.
  Mantenha a área plantada limpa e organizada para evitar a propagação de doenças e pragas.</p>
