--- a/sementesdeagua.html
+++ b/sementesdeagua.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <button>  <a href="index.html"> voltar</a></button>
-    O Programa Agrinho, maior programa de responsabilidade social do Sistema FAEP, tem como objetivo promover a educação rural e a sustentabilidade. Em 2024, o programa lançou a campanha “Agro pela Água: Família Agrinho de mãos dadas com o Meio Ambiente”, com foco na preservação e uso racional da água.
+    <p>O Programa Agrinho, maior programa de responsabilidade social do Sistema FAEP, tem como objetivo promover a educação rural e a sustentabilidade. Em 2024, o programa lançou a campanha “Agro pela Água: Família Agrinho de mãos dadas com o Meio Ambiente”, com foco na preservação e uso racional da água.</p>
 
-A campanha visa levar às novas gerações de cidadãos paranaenses uma importante mensagem de preservação e uso racional da água, para que não volte a perder no futuro. Os personagens do Agrinho, Nando e Aninha, são os porta-vozes da campanha.
+<p>A campanha visa levar às novas gerações de cidadãos paranaenses uma importante mensagem de preservação e uso racional da água, para que não volte a perder no futuro. Os personagens do Agrinho, Nando e Aninha, são os porta-vozes da campanha.</p>
 
-A água é fundamental para a produção de alimentos e para o abastecimento das cidades. No entanto, a estimativa que atingiu o Sul do Brasil em 2024 mostrou a importância de trabalhar a percepção de que a água é um elemento vital para a manutenção da vida e dos negócios do campo.
+<p>A água é fundamental para a produção de alimentos e para o abastecimento das cidades. No entanto, a estimativa que atingiu o Sul do Brasil em 2024 mostrou a importância de trabalhar a percepção de que a água é um elemento vital para a manutenção da vida e dos negócios do campo.</p>
 
-O Programa Agrinho, em parceria com a secretaria estadual do Desenvolvimento Sustentável e do Turismo (Sedest) e a secretaria estadual da Educação (Seed), criou uma campanha para levar às escolas e comunidades rurais a mensagem de preservação da água.
+<p>O Programa Agrinho, em parceria com a secretaria estadual do Desenvolvimento Sustentável e do Turismo (Sedest) e a secretaria estadual da Educação (Seed), criou uma campanha para levar às escolas e comunidades rurais a mensagem de preservação da água.</p>
 </body>
 </html>
