--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </ul>
             </seção>
             <seção id="ações">
-                <h2>Ações</h2>
+                <h2> Algumas ações durante o plantio de sementes no solo</h2>
                 <button id="plant-btn"> <a href="semente.html">Plantar Semente</a></button>
                 <button id="water-btn"> <a href="sementesdeagua.html">semente de agua o que e </a> </button>
                 <button id="harvest-btn"> <a href="broto.html"> Colheita de brotos </a> </button>
