--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <main>
             <seção id="fazenda">
                 <h2>Sua Fazenda</h2>
+                <img src="fazenda1.jpg" alt="imagem fazenda">
                 <i><p>Sua Fazenda é um projeto educacional que visa ensinar aos alunos sobre agricultura, sustentabilidade
                     e
                     conservação ambiental. O projeto é frequentemente utilizado nas escolas brasileiras como uma
