--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                     é
                     ensinar aos alunos os desafios e responsabilidades da agricultura, bem como a importância das
                     práticas
-                    sustentáveis.</p></i>
+                    sustentáveis. 
+                    Um exemplo de um jogo que ajuda nessas informaçoes:
+                    farming simulator simulador de fazenda um dos jogos mais famosos do mundo ele simula muito uma fazenda colheitas e gerenciamente da sua fazenda com isso vem bastante beneficios eles são proporcionar uma experiência divertida e envolvente, o jogo também pode ajudar os jogadores a desenvolver habilidades de gerenciamento, tomada de decisão e resolução de problemas.</p></i>
 
                 <h3>Algumas atividades possíveis em "Sua Fazenda" podem incluir:</h3>
 
