--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     sustentáveis. 
                     Um exemplo de um jogo que ajuda nessas informaçoes:
                     farming simulator simulador de fazenda um dos jogos mais famosos do mundo ele simula muito uma fazenda colheitas e gerenciamente da sua fazenda com isso vem bastante beneficios eles são proporcionar uma experiência divertida e envolvente, o jogo também pode ajudar os jogadores a desenvolver habilidades de gerenciamento, tomada de decisão e resolução de problemas.</p></i>
-                     <h4>exemplo de simuladores que ajudam no desenvolvimento de pecúarias e recursos</h4>
+                     <h4>exemplo de um simulador que ajudam no desenvolvimento de pecúarias e recursos</h4>
 
 
                 <h3>Algumas atividades possíveis em "Sua Fazenda" podem incluir:</h3>
