--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
                     Um exemplo de um jogo que ajuda nessas informaçoes:
                     farming simulator simulador de fazenda um dos jogos mais famosos do mundo ele simula muito uma fazenda colheitas e gerenciamente da sua fazenda com isso vem bastante beneficios eles são proporcionar uma experiência divertida e envolvente, o jogo também pode ajudar os jogadores a desenvolver habilidades de gerenciamento, tomada de decisão e resolução de problemas.</p></i>
                      <h4>exemplo de dois  simulador que ajudam no desenvolvimento de pecúarias e recursos</h4>
+                     <ul> 
+                     <li>farming simulator</li>
 
-                     farming simulator
-                     farming sim brasil
+                     <li>farming sim brasil</li>
+                    </ul>
 
 
                 <h3>Algumas atividades possíveis em "Sua Fazenda" podem incluir:</h3>
