--- a/broto.html
+++ b/broto.html
@@ -10,8 +10,8 @@
     O Broto do Agrinho
 
 <p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento e o desenvolvimento sustentável. O broto é uma parte fundamental do ciclo de vida de uma planta, e no contexto do Agrinho, ele simboliza a importância da educação rural e da sustentabilidade.</p>
-
-O que representa o irmão do Agrinho?
+<ul> 
+<li>O que representa o irmão do Agrinho?
 
 O broto do Agrinho representa:
 
@@ -26,8 +26,8 @@ O broto do Agrinho é usado de diversas formas no programa, incluindo:
 Ilustrações :
 Logotipo :
 Atividades : Ó mano
-Conclusão
-
+Conclusão</li>
+</ul>
 <p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade, a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a importância da agricultura, do meio ambiente e da sustentabilidade.</p>
 </body>
 </html>
