--- a/broto.html
+++ b/broto.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <button> <a href="index.html">voltar</a> </button>
     O Broto do Agrinho
 
-<p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento e o desenvolvimento sustentável. O broto é uma parte fundamental do ciclo de vida de uma planta, e no contexto do Agrinho, ele simboliza a importância da educação rural e da sustentabilidade.</p>
-<ul> 
-<li>O que representa o irmão do Agrinho?
+    <p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento e o desenvolvimento
+        sustentável. O broto é uma parte fundamental do ciclo de vida de uma planta, e no contexto do Agrinho, ele
+        simboliza a importância da educação rural e da sustentabilidade.</p>
+    <ul>
+        <li>O que representa o irmão do Agrinho?
 
-O broto do Agrinho representa:
+            O broto do Agrinho representa:
 
-Crescimento : Ó mano
-Sustentabilidade : O mano
-Educação : O
-Futuro :
-Como o broto do Agrinho é usado no programa?
+            Crescimento : Ó mano
+            Sustentabilidade : O mano
+            Educação : O
+            Futuro :
+            Como o broto do Agrinho é usado no programa?
 
-O broto do Agrinho é usado de diversas formas no programa, incluindo:
+            O broto do Agrinho é usado de diversas formas no programa, incluindo:
 
-Ilustrações :
-Logotipo :
-Atividades : Ó mano
-Conclusão</li>
-</ul>
-<p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade, a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a importância da agricultura, do meio ambiente e da sustentabilidade.</p>
+            Ilustrações :
+            Logotipo :
+            Atividades : Ó mano
+            Conclusão</li>
+    </ul>
+    <p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade,
+        a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a
+        importância da agricultura, do meio ambiente e da sustentabilidade.</p>
 </body>
+
 </html>
