--- a/broto.html
+++ b/broto.html
@@ -17,20 +17,20 @@
     <ul>
         <li>O que representa o irmão do Agrinho?
 
-            O broto do Agrinho representa:
+            <p>O broto do Agrinho representa:</p>
 
-            Crescimento : Ó mano
+            <p>Crescimento : Ó mano
             Sustentabilidade : O mano
             Educação : O
             Futuro :
-            Como o broto do Agrinho é usado no programa?
+            Como o broto do Agrinho é usado no programa?</p>
 
-            O broto do Agrinho é usado de diversas formas no programa, incluindo:
+            <p>O broto do Agrinho é usado de diversas formas no programa, incluindo:</p>
 
-            Ilustrações :
+            <p>Ilustrações :
             Logotipo :
             Atividades : Ó mano
-            Conclusão</li>
+            Conclusão</li></p>
     </ul>
     <p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade,
         a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a
