--- a/broto.html
+++ b/broto.html
@@ -27,14 +27,14 @@
 
             <p>O broto do Agrinho é usado de diversas formas no programa, incluindo:</p>
 
-            <p>Ilustrações :
+            <p></p>Ilustrações :
             Logotipo :
             Atividades : Ó mano
-            Conclusão</li></p>
+            Conclusão</li>
     </ul>
     <p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade,
-        a educação e o futuro. <p> Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a
-        importância da agricultura, <p> do meio ambiente e da sustentabilidade.</p>
+        a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a
+        importância da agricultura, do meio ambiente e da sustentabilidade.</p>
 </body>
 
 </html>
