--- a/broto.html
+++ b/broto.html
@@ -27,7 +27,7 @@
 
             <p>O broto do Agrinho é usado de diversas formas no programa, incluindo:</p>
 
-            <p></p>Ilustrações :
+            <p>Ilustrações :
             Logotipo :
             Atividades : Ó mano
             Conclusão</li>
