--- a/broto.html
+++ b/broto.html
@@ -30,7 +30,7 @@
             <p>Ilustrações :
             Logotipo :
             Atividades : Ó mano
-            Conclusão</li>
+            Conclusão <p></li>
     </ul>
     <p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade,
         a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a
