--- a/broto.html
+++ b/broto.html
@@ -17,20 +17,20 @@
     <ul>
         <li>O que representa o irmão do Agrinho?
 
-            <p>O broto do Agrinho representa:</p>
+            <li><p>O broto do Agrinho representa:</p></li>
 
-            <p>Crescimento : Ó mano
+            <li><p>Crescimento : Ó mano
             Sustentabilidade : O mano
             Educação : O
             Futuro :
-            Como o broto do Agrinho é usado no programa?</p>
+            Como o broto do Agrinho é usado no programa?</p></li>
 
-            <p>O broto do Agrinho é usado de diversas formas no programa, incluindo:</p>
+            <li><p>O broto do Agrinho é usado de diversas formas no programa, incluindo:</p></li>
 
-            <p>Ilustrações :
+            <li><p>Ilustrações :
             Logotipo :
             Atividades : Ó mano
-            Conclusão <p></li>
+            Conclusão <p></li></li>
     </ul>
     <p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade,
         a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a
