--- a/broto.html
+++ b/broto.html
@@ -14,24 +14,34 @@
     <p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento e o desenvolvimento
         sustentável. O broto é uma parte fundamental do ciclo de vida de uma planta, e no contexto do Agrinho, ele
         simboliza a importância da educação rural e da sustentabilidade.</p>
-    
-        <li>O que representa o irmão do Agrinho?
 
-            <li><p>O broto do Agrinho representa:</p></li>
+    <li>O que representa o irmão do Agrinho?
 
-            <li><p>Crescimento : Ó mano
+    <li>
+        <p>O broto do Agrinho representa:</p>
+    </li>
+
+    <li>
+        <p>Crescimento : Ó mano
             Sustentabilidade : O mano
             Educação : O
             Futuro :
-            Como o broto do Agrinho é usado no programa?</p></li>
+            Como o broto do Agrinho é usado no programa?</p>
+    </li>
 
-            <li><p>O broto do Agrinho é usado de diversas formas no programa, incluindo:</p></li>
+    <li>
+        <p>O broto do Agrinho é usado de diversas formas no programa, incluindo:</p>
+    </li>
 
-            <li><p>Ilustrações :
+    <li>
+        <p>Ilustrações :
             Logotipo :
             Atividades : Ó mano
-            Conclusão <p></li></li>
-    
+            Conclusão
+        <p>
+    </li>
+    </li>
+
     <p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade,
         a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a
         importância da agricultura, do meio ambiente e da sustentabilidade.</p>
