--- a/broto.html
+++ b/broto.html
@@ -15,9 +15,8 @@
         sustentável. O broto é uma parte fundamental do ciclo de vida de uma planta, e no contexto do Agrinho, ele
         simboliza a importância da educação rural e da sustentabilidade.</p>
     <ul>
-        <li>O que representa o irmão do Agrinho?
-        
-
+        <li>O que representa o irmão do Agrinho?<li>
+    
     </ul>
 
     <ul>
