--- a/broto.html
+++ b/broto.html
@@ -18,13 +18,13 @@
         <li>O que representa o irmão do Agrinho?<li>
     </ul>
 
-    <ul>
+    
 
 
-        <li>
-            <p>O broto do Agrinho representa:</p><li>
-
-    </ul>
+        <ul>
+            <li><p>O broto do Agrinho representa:</p><li>
+</ul>
+    
     </li>
 
     <ul>
