--- a/broto.html
+++ b/broto.html
@@ -1,65 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
     <button> <a href="index.html">voltar</a> </button>
     O Broto do Agrinho
 
-    <p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento e o desenvolvimento
-        sustentável. O broto é uma parte fundamental do ciclo de vida de uma planta, e no contexto do Agrinho, ele
-        simboliza a importância da educação rural e da sustentabilidade.</p>
-    <ul>
-        <li>O que representa o irmão do Agrinho?<li>
-    </ul>
+O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento e o desenvolvimento sustentável. O broto é uma parte fundamental do ciclo de vida de uma planta, e no contexto do Agrinho, ele simboliza a importância da educação rural e da sustentabilidade.
 
-    
+O que representa o irmão do Agrinho?
 
+O broto do Agrinho representa:
 
-        <ul>
-            <li><p>O broto do Agrinho representa:</p><li>
-</ul>
-    
-    </li>
+Crescimento : Ó mano
+Sustentabilidade : O mano
+Educação : O
+Futuro :
+Como o broto do Agrinho é usado no programa?
 
-    <ul>
-        <li>
-            <p>Crescimento : Ó mano
-                Sustentabilidade : O mano
-                Educação : O
-                Futuro :
-                Como o broto do Agrinho é usado no programa?</p>
-        <li>
-    </ul>
-    </li>
-    <ul>
+O broto do Agrinho é usado de diversas formas no programa, incluindo:
 
-        <li>
-            <p>O broto do Agrinho é usado de diversas formas no programa, incluindo:</p>
-        </li>
-    </ul>
+Ilustrações :
+Logotipo :
+Atividades : Ó mano
+Conclusão
 
-
-    <ul>
-        <li>
-            <p>Ilustrações :
-                Logotipo :
-                Atividades : Ó mano
-                Conclusão
-            <p>
-        </li>
-    </ul>
-
-
-
-    <p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade,
-        a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a
-        importância da agricultura, do meio ambiente e da sustentabilidade.</p>
+O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade, a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a importância da agricultura, do meio ambiente e da sustentabilidade.
 </body>
-
 </html>
