--- a/broto.html
+++ b/broto.html
@@ -9,25 +9,25 @@
     <button> <a href="index.html">voltar</a> </button>
     O Broto do Agrinho
 
-O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento e o desenvolvimento sustentável. O broto é uma parte fundamental do ciclo de vida de uma planta, e no contexto do Agrinho, ele simboliza a importância da educação rural e da sustentabilidade.
+<p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento e o desenvolvimento sustentável. O broto é uma parte fundamental do ciclo de vida de uma planta, e no contexto do Agrinho, ele simboliza a importância da educação rural e da sustentabilidade.</p>
 
-O que representa o irmão do Agrinho?
+<p>O que representa o irmão do Agrinho?</p>
 
-O broto do Agrinho representa:
+<p>O broto do Agrinho representa:</p>
 
-Crescimento : Ó mano
+<p>Crescimento : Ó mano
 Sustentabilidade : O mano
 Educação : O
 Futuro :
-Como o broto do Agrinho é usado no programa?
+Como o broto do Agrinho é usado no programa?</p>
 
-O broto do Agrinho é usado de diversas formas no programa, incluindo:
+<p>O broto do Agrinho é usado de diversas formas no programa, incluindo:</p>
 
-Ilustrações :
+<p>Ilustrações :
 Logotipo :
 Atividades : Ó mano
-Conclusão
+Conclusão</p>
 
-O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade, a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a importância da agricultura, do meio ambiente e da sustentabilidade.
+<p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade, a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a importância da agricultura, do meio ambiente e da sustentabilidade.</p>
 </body>
 </html>
