--- a/broto.html
+++ b/broto.html
@@ -8,9 +8,9 @@
 <body>
     <button> <a href="index.html">voltar</a> </button>
     O Broto do Agrinho
-
-<p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento e o desenvolvimento sustentável. O broto é uma parte fundamental do ciclo de vida de uma planta, e no contexto do Agrinho, ele simboliza a importância da educação rural e da sustentabilidade.</p>
-
+<ul>
+<li><p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento e o desenvolvimento sustentável. O broto é uma parte fundamental do ciclo de vida de uma planta, e no contexto do Agrinho, ele simboliza a importância da educação rural e da sustentabilidade.</p></li>
+</ul>
 <p>O que representa o irmão do Agrinho?</p>
 
 <p>O broto do Agrinho representa:</p>
