--- a/broto.html
+++ b/broto.html
@@ -11,23 +11,38 @@
 <ul>
 <li><p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento e o desenvolvimento sustentável. O broto é uma parte fundamental do ciclo de vida de uma planta, e no contexto do Agrinho, ele simboliza a importância da educação rural e da sustentabilidade.</p></li>
 </ul>
-<p>O que representa o irmão do Agrinho?</p>
 
-<p>O broto do Agrinho representa:</p>
+<ul>
+<li><p>O que representa o irmão do Agrinho?</p></li>
+</ul>
 
-<p>Crescimento : Ó mano
+<ul>
+<li><p>O broto do Agrinho representa:</p></li>
+</ul>
+
+<ul>
+<li><p>Crescimento : Ó mano
 Sustentabilidade : O mano
 Educação : O
 Futuro :
-Como o broto do Agrinho é usado no programa?</p>
+Como o broto do Agrinho é usado no programa?</p></li>
 
-<p>O broto do Agrinho é usado de diversas formas no programa, incluindo:</p>
+</ul>
 
-<p>Ilustrações :
+<ul>
+<li><p>O broto do Agrinho é usado de diversas formas no programa, incluindo:</p></li>
+</ul>
+
+<ul>
+<li><p>Ilustrações :
 Logotipo :
 Atividades : Ó mano
-Conclusão</p>
+Conclusão</p></li>
+</ul>
 
-<p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade, a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a importância da agricultura, do meio ambiente e da sustentabilidade.</p>
+<ul>
+<li><p>O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade, a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a importância da agricultura, do meio ambiente e da sustentabilidade.</p></li>
+</ul>
+
 </body>
 </html>
