--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <h1> Sobre o Agrinho</h1>
+            <i><h1> Sobre o Agrinho</h1></i>
             <img src="agrinho logo 2.jpg" alt="logo agrinho">
              <i><p>O Agrinho é um programa educacional que visa à formação de cidadãos conscientes, críticos e
                 participativos, promovendo a educação rural de qualidade e estimulando práticas sustentáveis e
