--- a/semente.html
+++ b/semente.html
@@ -10,7 +10,7 @@
 <body>
     <button> <a href="index.html"> voltar </a> </button>
     <ul>
-        <li> Passo 1: Preparar o Solo</li>
+        <i><li> Passo 1: Preparar o Solo</li></i>
     </ul>
     <p>Escolha um local com solo fértil e bem drenado.
         Remova qualquer vegetação ou detritos do solo.
